[gd_scene load_steps=12 format=1]

[ext_resource path="res://Script/Menu.gd" type="Script" id=1]
[ext_resource path="res://Asset/Menu/home/bgHome.png" type="Texture" id=2]
[ext_resource path="res://Asset/Menu/home/mulaiBaru.png" type="Texture" id=3]
[ext_resource path="res://Asset/Menu/home/lanjutkan.png" type="Texture" id=4]
[ext_resource path="res://Asset/Menu/home/keluar.png" type="Texture" id=5]
[ext_resource path="res://Asset/Menu/home/petunjuk.png" type="Texture" id=6]
[ext_resource path="res://Asset/Menu/popup/background.png" type="Texture" id=7]
[ext_resource path="res://Asset/CooperHewitt-Bold.otf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=2]

font/size = 26
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]

font/size = 26
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 8 )

[sub_resource type="DynamicFont" id=1]

font/size = 28
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 8 )

[node name="menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="bgHome" type="Sprite" parent="."]

transform/pos = Vector2( 640.02, 360.43 )
texture = ExtResource( 2 )

[node name="mulai" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 515.0
margin/top = 314.0
margin/right = 749.0
margin/bottom = 391.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = true

[node name="lanjutkan" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 523.0
margin/top = 396.0
margin/right = 745.0
margin/bottom = 462.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = true

[node name="keluar" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 527.0
margin/top = 551.0
margin/right = 749.0
margin/bottom = 617.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = true

[node name="petunjuk" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 523.0
margin/top = 473.0
margin/right = 745.0
margin/bottom = 538.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = true

[node name="isiNama" type="PopupMenu" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 466.722
margin/top = 229.719
margin/right = 486.722
margin/bottom = 249.719
popup/exclusive = false
items = [  ]

[node name="background1" type="Sprite" parent="isiNama"]

transform/pos = Vector2( 178, 89 )
texture = ExtResource( 7 )

[node name="ya" type="Button" parent="isiNama/background1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -185.0
margin/top = 66.0
margin/right = -133.0
margin/bottom = 99.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0976563, 0.78125, 0.172424, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "IYA"
flat = true

[node name="tidak" type="Button" parent="isiNama/background1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 111.0
margin/top = 64.0
margin/right = 190.0
margin/bottom = 92.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.878906, 0.243759, 0.243759, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "TIDAK"
flat = true

[node name="dataDihapus" type="Label" parent="isiNama/background1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -178.0
margin/top = -89.0
margin/right = 183.0
margin/bottom = 16.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.288574, 0.510265, 0.769531, 1 )
custom_constants/shadow_offset_y = 0
text = "DATA LAMA AKAN DIHAPUS

SETUJU?"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="popupMulai" type="PopupMenu" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 20.0
margin/bottom = 20.0
popup/exclusive = false
items = [  ]

[node name="background2" type="Sprite" parent="popupMulai"]

transform/pos = Vector2( 644.722, 318.719 )
texture = ExtResource( 7 )

[node name="ya" type="Button" parent="popupMulai/background2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -185.0
margin/top = 66.0
margin/right = -133.0
margin/bottom = 99.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0976563, 0.78125, 0.172424, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "IYA"
flat = true

[node name="tidak" type="Button" parent="popupMulai/background2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 111.0
margin/top = 64.0
margin/right = 190.0
margin/bottom = 92.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.878906, 0.243759, 0.243759, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "TIDAK"
flat = true

[node name="dataDihapus" type="Label" parent="popupMulai/background2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -178.0
margin/top = -89.0
margin/right = 183.0
margin/bottom = 16.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.288574, 0.510265, 0.769531, 1 )
custom_constants/shadow_offset_y = 0
text = "DATA LAMA AKAN DIHAPUS

SETUJU?"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="mulai" to="." method="_on_mulai_pressed"]

[connection signal="pressed" from="lanjutkan" to="." method="_on_lanjutkan_pressed"]

[connection signal="pressed" from="keluar" to="." method="_on_keluar_pressed"]

[connection signal="pressed" from="petunjuk" to="." method="_on_petunjuk_pressed"]

[connection signal="pressed" from="popupMulai/background2/ya" to="." method="_on_ya_pressed"]

[connection signal="pressed" from="popupMulai/background2/tidak" to="." method="_on_tidak_pressed"]


